--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,19 +1,44 @@
+.body {
+  --background: url(../assets/sky-sadgrl.png);
+  --foreground: rgb(255, 255, 255, 0.95);
+  --blue: rgb(32, 70, 82, 0.95);
+  --light-blue: rgb(153, 215, 248);
+  --light-blue2: rgb(148, 193, 218);
+  --bright-blue: rgb(25, 176, 214);
+  --black: rgb(0, 0, 0, 0.85);
+  --mizuiro: rgb(162, 241, 255);
+  --baby-blue: rgb(153, 207, 231, 0.75);
+  --pink: rgb(255, 226, 243);
+}
+
 .page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
+  font-family: var(--cloister-black);
+}
 
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
+.header {
+  background-color: var(--header-color);
+  font-size: medium;
+  text-align: center;
+  width: 50%;
+  height: auto;
+  margin: 0 auto;
+  padding: 12px 0px;
+  border-radius: 8px;
+}
 
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
+.topNav {
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
+  width: 50%;
+  margin: 2px auto;
+  padding: 4px 0px;
+  font-family: var(--venice-classic);
+  font-size: 20px;
+  background-color: var(--widget-bg);
+  color: var(--widget-text);
+  border-radius: 5px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -35,7 +60,7 @@
 }
 
 .main ol {
-  font-family: var(--font-geist-mono);
+  font-family: var(--glow-night);
   padding-left: 0;
   margin: 0;
   font-size: 14px;
@@ -68,10 +93,7 @@
   padding: 0 20px;
   border: none;
   border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
+  transition: background 0.2s, color 0.2s, border-color 0.2s;
   cursor: pointer;
   display: flex;
   align-items: center;
