--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,9 +16,13 @@
   color: var(--foreground);
   --button-color: var(--foreground);
   --button-text: var(--bright-blue);
-  --widget-bg: var(--foreground);
-  --widget-text: var(--baby-blue);
+  --header-bg: var(--foreground);
+  --header-text: var(--baby-blue);
   --header-color: var(--baby-blue);
+  --widget-bg: var(--baby-blue);
+  --widget-border: 2px solid white;
+  --bold-color: var(--pink);
+  --hover-color: var(--mizuiro);
 }
 
 .dark {
@@ -26,9 +30,13 @@
   color: var(--light-blue);
   --button-color: var(--black);
   --button-text: var(--light-blue);
-  --widget-bg: var(--black);
-  --widget-text: var(--light-blue);
+  --header-bg: var(--black);
+  --header-text: var(--light-blue);
   --header-color: var(--blue);
+  --widget-bg: var(--black);
+  --widget-border: 2px solid var(--blue);
+  --bold-color: var(--bright-blue);
+  --hover-color: white;
 }
 
 .themeChange {
@@ -49,14 +57,34 @@ body {
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--glow-night), Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h2 {
+  font-family: var(--cloister-black);
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+a:hover {
+  color: var(--hover-color);
+  text-decoration: none;
+}
+
+b,
+i {
+  color: var(--bold-color);
+  font-family: var(--glow-night);
+}
+
+b:hover,
+i:hover {
+  color: var(--hover-color);
 }
 
 @media (prefers-color-scheme: dark) {
