--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,3 +1,28 @@
 .footer {
   display: inherit;
+  text-align: center;
+  font-size: 70%;
+  margin: 0 10px;
+}
+
+.footer p {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.footer section {
+  margin-top: 4px;
+  margin-bottom: 5px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  gap: 2;
+  align-items: center;
+  font-size: 100%;
+}
+
+.footer a {
+  font-size: medium;
+  font-family: var(--glow-night);
 }
